# claude-code-hackathon

./: .env.example  .gitignore  .mcp.json  05-agentic-solution.md  CLAUDE.md  README.md  presentation.html  pyproject.toml  requirements.txt
data/eval/: adversarial.jsonl  normal.jsonl
data/inbox/CLM-001/: metadata.json  summary.txt
data/inbox/CLM-002/: metadata.json  summary.txt
data/inbox/CLM-003/: metadata.json  summary.txt
data/inbox/CLM-004/: metadata.json  summary.txt
data/inbox/CLM-005/: metadata.json  summary.txt
data/policies/: RCA_auto.json  RC_professionale.json  incendio_casa.json  infortuni.json  polizza_vita.json
docs/: mandate.md
docs/adr/: 001-agent-arch.md
evals/: harness.py  run_evals.py
scripts/: _create_fixtures.py  _fix_eval_data.py  build_presentation.py  demo_server.py  generate_data.py
src/: escalation_rules.py  validator.py
src/agent/: __main__.py  coordinator.py  graph_utils.py  loop.py  tools_node.py
src/hooks/: pre_tool_use.py
src/specialists/: document_reader.py  policy_checker.py
src/tools/: check_fraud_flags.py  check_sanctions.py  escalate_claim.py  fetch_claim.py  lookup_policy.py  parse_attachments.py  write_decision.py
tests/agent/: test_coordinator.py  test_graph_utils.py  test_loop.py  test_tools_node.py
tests/evals/: test_harness.py
tests/hooks/: test_pre_tool_use.py
tests/specialists/: test_document_reader.py  test_policy_checker.py
tests/tools/: test_fetch_claim.py  test_fraud_sanctions.py  test_lookup_policy.py  test_parse_attachments.py  test_write_decision.py
(+142 files in other folders)
